Rimossa appendice, e il capitolo dell'Applicazione, correzioni ortografiche nei primi due capitolo Kotlin e Firebase

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,16 +1,118 @@
-\begin{thebibliography}{90}             %crea l'ambiente bibliografia
-\rhead[\fancyplain{}{\bfseries \leftmark}]{\fancyplain{}{\bfseries
-\thepage}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%aggiunge la voce Bibliografia
-                                        %   nell'indice
-\addcontentsline{toc}{chapter}{Bibliografia}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%provare anche questo comando:
-%%%%%%%%%%%\addcontentsline{toc}{chapter}{\numberline{}{Bibliografia}}
-\bibitem{K1} Nome. Argomento \url{https://kotlinlang.org/docs/reference/faq.html}, 2013.
-\bibitem{K2} Nome. Argomento \url{http://www.google.it}, 2014.
-\bibitem{K3} Nome. Argomento \url{http://www.google.it}, 2015.
-\bibitem{K4} Nome. Argomento \url{http://www.google.it}, 2016.
+
+
+\begin{thebibliography}{9}
+
+\bibitem{latexcompanion}
+Massimo Carli
+\textit{Android 6. Guida per lo sviluppatore}.
+Apogeo, 2016.
+
+\bibitem{latexcompanion}
+Stephen Samuel, Stefan Bocutiu
+\textit{Programming Kotlin}.
+Packtpub, 2017.
+
+\bibitem{latexcompanion}
+ Miloš Vasić
+ \textit{Mastering Android Development with Kotlin}.
+Packtpub, 2017.
+
+
+\bibitem{latexcompanion}
+Ronak K. Panchal,Akshay K. Patel \textit{A comparative study: Java Vs kotlin Programming in Android}.
+International Journal of Innovative Trends in Engineering and Research, 2016.
+
+\bibitem{ReactiveX}
+ReactiveX documentation
+\\\texttt{http://reactivex.io/documentation}
+
+\bibitem{Android Developer }
+Google Android Developer Documentation
+\\\texttt{https://developer.android.com}
+
+\bibitem{Firebase}
+Google Firebase Documentation
+\\\texttt{https://firebase.google.com/docs/}
+
+\bibitem{Google I/O}
+Google I/O - 2017
+\\\texttt{https://events.google.com/io/}
+
+\bibitem{Kotlin Lang}
+Kotlin Language Documentation
+\\\texttt{https://kotlinlang.org/docs/kotlin-docs.pdf}
+
+\bibitem{Java Docs}
+Oracle Java Documentation
+\\\texttt{https://docs.oracle.com/}
+
+\bibitem{Xamarin Guides}
+Xamarin Android Google services guides
+\\\texttt{https://developer.xamarin.com/guides/android/data-and-cloud-services/}
+
+\bibitem{FirebaseUI-Android}
+Libreria per la gestione dei servizi Firebase
+\\\texttt{https://github.com/firebase/FirebaseUI-Android}
+
+\bibitem{RxJava}
+Libreria di supporto per la programmazione reattiva su Java
+\\\texttt{https://github.com/ReactiveX/RxJava}
+
+\bibitem{RxKotlin}
+Libreria di supporto per la programmazione reattiva su Kotlin
+\\\texttt{https://github.com/ReactiveX/RxAndroid}
+
+\bibitem{RxAndroid}
+Libreria di supporto per la programmazione reattiva su Android
+\\\texttt{https://github.com/ReactiveX/RxKotlin}
+
+\bibitem{BottomNavigationViewEx}
+Libreria di supporto per il Widget del menu di navigazione
+\\\texttt{https://github.com/ittianyu/BottomNavigationViewEx}
+
+\bibitem{Welcome Android}
+Libreria di supporto per mostrare pagine di presentazione e introduzione iniziali
+\\\texttt{https://github.com/stephentuso/welcome-android}
+
+\bibitem{MoneyEditText}
+Libreria di supporto per il widget che consente di indicare l'ammontare di una spesa
+\\\texttt{https://github.com/shuhart/MoneyEditText}
+
+\bibitem{LoadingButtonAndroid }
+Libreria di supporto per il widget che trasforma un Button in una barra di caricamento
+\\\texttt{https://github.com/leandroBorgesFerreira/LoadingButtonAndroid}
+
+\bibitem{Glide}
+Libreria di supporto per la gestione delle immagini con funzionalità di caching
+\\\texttt{https://github.com/bumptech/glide}
+
+\bibitem{CircleImageView}
+Libreria di supporto per visualizzare immagini con un bordo circolare
+\\\texttt{https://github.com/hdodenhof/CircleImageView}
+
+\bibitem{SublimePicker}
+Libreria di supporto per la selezione di una data da un calendario personalizzabile
+\\\texttt{https://github.com/vikramkakkar/SublimePicker/}
+
+\bibitem{ImagePicker}
+Libreria di supporto per selezionare un'immagine dalla galleria del dispositivo
+\\\texttt{https://github.com/Mariovc/ImagePicker}
+
+\bibitem{facebook Android SDK}
+Libreria di supporto per l'accesso tramite il social network Facebook
+\\\texttt{https://github.com/facebook/facebook-android-sdk}
+
+
+\bibitem{Firebase Command Line Tools}
+Tool a linea di comando per gestire i servizi Firebase
+\\\texttt{https://github.com/facebook/facebook-android-sdk}
+
+
+\bibitem{Firebase SDK for Cloud Functions}
+Libreria di supporto per l'utilizzo del servizio Firebase Cloud Functions
+\\\texttt{https://github.com/firebase/firebase-functions}
+
+
+
 
 \end{thebibliography}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%non numera l'ultima pagina sinistra
-\clearpage{\pagestyle{empty}\cleardoublepage}
