--- a/Frontespizio.tex
+++ b/Frontespizio.tex
@@ -8,18 +8,20 @@ Corso di Laurea in Informatica }
 \end{center}
 \vspace{25mm}
 \begin{center}
- {\large{\bf KOTLIN E FIREBASE}}\\
+ {\large{\bf UTILIZZO DI KOTLIN PER SVILUPPO }}\\
  \vspace{2mm}
- {\large{\bf UTILIZZI E FUNZIONALIT\'A}}\\
+ {\large{\bf DI APPLICAZIONI MOBILI: }}\\
  \vspace{2mm}
- {\large{\bf DI UN APPLICAZIONE ANDROID}}\\
+ {\large{\bf UN CASO DI STUDIO}}\\
+ \vspace{2mm}
+
  \end{center}
  \vspace{30mm}
  \par
  \noindent
  \begin{minipage}[t]{0.5\textwidth}
  {\large{\bf Relatore:\\
- Chiar.mo Prof.\\
+ Dott.\\
  LUCA BEDOGNI}}\\
  \end{minipage}
  \hfill
@@ -30,6 +32,6 @@ Corso di Laurea in Informatica }
 \vspace{30mm}
 \begin{center}
 {\large{\bf Sessione III\\%inserire il numero della sessione in cui ci si laurea
-Anno Accademico 2017/18}}%inserire l'anno accademico a cui si è iscritti
+Anno Accademico 2016/17}}%inserire l'anno accademico a cui si è iscritti
 \end{center}
 \end{titlepage}
