Aggiunti ringraziamenti, nuova bibliografia, correzzioni nei capitolo conclusione kotlin firebase

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -102,11 +102,13 @@ Libreria di supporto per selezionare un'immagine dalla galleria del dispositivo
 Libreria di supporto per l'accesso tramite il social network Facebook
 \\\texttt{https://github.com/facebook/facebook-android-sdk}
 
+\bibitem{Firebase Admin}
+Libreria di supporto per interagire con i servizi Firebase con NodeJS
+\\\texttt{https://github.com/firebase/firebase-admin-node}
 
 \bibitem{Firebase Command Line Tools}
 Tool a linea di comando per gestire i servizi Firebase
 \\\texttt{https://github.com/facebook/facebook-android-sdk}
-
 
 \bibitem{Firebase SDK for Cloud Functions}
 Libreria di supporto per l'utilizzo del servizio Firebase Cloud Functions
