--- a/Capitoli/Kotlin.tex
+++ b/Capitoli/Kotlin.tex
@@ -97,7 +97,7 @@ Kotlin quindi non comporta alcun svantaggio al programmatore oltre all'aumento d
 
 
 \subsection{Coroutines}
-Dalla versione 1.1 Kotlin, introduce in fase sperimentale le Coroutines, consentendo agli sviluppatore di testarne le funzionalità, semplicemente aggiungendo nel file di configurazione ``build.gradle'', presente all'interno dell sorgente del progetto Android, un eccezione:
+Dalla versione 1.1 Kotlin, introduce in fase sperimentale le Coroutines, consentendo agli sviluppatore di testarne le funzionalità, semplicemente aggiungendo nel file di configurazione ``build.gradle'', presente all'interno dell sorgente del progetto Android, un'eccezione:
 \begin{lstlisting}[language=bash,caption={Gradle Coroutines }]
 kotlin {
  experimental {
