--- a/Ringraziamenti.tex
+++ b/Ringraziamenti.tex
@@ -2,4 +2,4 @@
 
 \chapter*{Ringraziamenti}
 \thispagestyle{empty}
-Un ringraziamento speciale alla mia famiglia che mi ha sempre sostenuto.
+Un ringraziamento speciale alla mia famiglia, parenti e amici che mi ha sempre sostenuto in questo percorso.
